# yoda

./: CMakeLists.txt  README.md  ReleaseNotes.md  cmake-modules.html  index.html  objects.inv  searchindex.js  user_manual.html
_sources/: index.rst.txt
_sources/cmake-modules/: FindSLURM.rst.txt  yodaAddCustomDummyTarget.rst.txt  yodaAddOptionalDeps.rst.txt  yodaAddTargetCleanAll.rst.txt  yodaCheckCXXFlag.rst.txt  yodaCheckVarsAreDefined.rst.txt  yodaCloneRepository.rst.txt  yodaCreatePackageString.rst.txt  yodaEnableFullRPATH.rst.txt  yodaExportOptions.rst.txt  yodaGenerateCMakeScript.rst.txt  yodaGetCacheVariables.rst.txt  yodaGetGitHeadRevision.rst.txt  yodaGetScriptDir.rst.txt  yodaInit.rst.txt  yodaMakeCMakeScript.rst.txt  yodaMakeStringPair.rst.txt  yodaReportResult.rst.txt  yodaSetCXXStandard.rst.txt  yodaSetDownloadDir.rst.txt
cmake/: External_Boost.cmake  External_GTClang.cmake  External_GridTools.cmake  External_Protobuf.cmake  External_cosmo-prerelease-gtclang.cmake  External_dawn.cmake  External_gtclang.cmake  External_serialbox2.cmake  yodaAddCustomDummyTarget.cmake  yodaAddExecutable.cmake  yodaAddLibrary.cmake  yodaAddOptionalDeps.cmake  yodaAddTargetClangFormat.cmake  yodaAddTargetCleanAll.cmake  yodaAddUnittest.cmake  yodaCheckAndSetCXXFlag.cmake  yodaCheckCXXFlag.cmake  yodaCheckInSourceBuild.cmake  yodaCheckRequiredVars.cmake  yodaCheckVarsAreDefined.cmake  yodaCloneRepository.cmake  yodaCombineLibraries.cmake  yodaConfigureFile.cmake  yodaCreateLibrary.cmake  yodaCreatePackageString.cmake  yodaDevelopmentHelpers.cmake  yodaEnableFullRPATH.cmake  yodaExportOptions.cmake  yodaExportPackage.cmake  yodaFindPackage.cmake  yodaFindPythonModule.cmake  yodaGenerateCMakeScript.cmake  yodaGetArchitectureInfo.cmake  yodaGetCacheVariables.cmake  yodaGetCompilerInfo.cmake  yodaGetGitHeadRevision.cmake  yodaGetPlatformInfo.cmake  yodaGetScriptDir.cmake  yodaIncludeGuard.cmake  yodaInit.cmake  (+10 more)
cmake-modules/: External_Boost.html  External_GTClang.html  External_Protobuf.html  External_gtclang.html  FindClang.html  FindGridTools.html  FindLLVM.html  FindSLURM.html  FindSphinx.html  Findbash.html  Findclang-format.html  yodaCheckVarsAreDefined.html  yodaConfigureFile.html  yodaEnableFullRPATH.html  yodaExportOptions.html  yodaExportPackage.html  yodaFindPackage.html  yodaFindPythonModule.html  yodaGenerateCMakeScript.html  yodaGetGitHeadRevision.html  yodaGetScriptDir.html  yodaInit.html  yodaMakeCMakeScript.html
cmake/modules/: FindClang.cmake  FindGridTools.cmake  FindLLVM.cmake  FindSLURM.cmake  FindSphinx.cmake  Findccache.cmake  Findclang-format.cmake
docs/: cmake-modules.rst  cmake-modules.rst.in  conf.py  user_manual.rst
(+76 files in other folders)
